ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-20 Johannes Schobig
	- MAKEFILE:
		* Fixed #791: r877 - error when compile
		* Fixed #801: Fedora makefile is bad (thanks to graywolf)

2007-10-19 Raphael Geissert
    - CONFIGS:
        * Fixed #7: no user set to run awstats cronjobs
    - ENGINE:
        * Fixed #796: let aliases share the same mount point with a subdomain
    - GUI:
        * Fixed some issues with email forwarders (see #555)
        * Reduced number of entries in admin's log
        * Fixed #152: Add webmaster@domain.tld and postmaster@domain.tld
        * Added email notification to reseller when an alias requires activation

2007-10-18 Benedikt Heintel
	- ENGINE:
		* Fixed #795: Domains Status not OK.

2007-10-17 Malte Geierhos
	- SETUP:
		* Fixed #786 (thanks to greg@proxyconcept.net)
		* Fixed #785 (thanks to greg@proxyconcept.net)

2007-10-17 Benedikt Heintel
	- DISTS:
		* Updated fedora
	- SETUP:
		* Fixed #783: added Makefile.gentoo
		* Fixed #784: ispcp-setup fails with compilation errors
		* Fixed #785: bad test into configs/init.d/Makefile
		* Fixed #788: mistakes with the php4-fcgi-starter.tpl
	- TOOLS:
		* Updated PMA to 2.11.1.2 (#789)

2007-10-16 Raphael Geissert
    - ENGINE:
        * Improved entropy pool seeding code
    - SETUP:
        * Fixed #782: cannot stat `./setup/vhcs2ispcp.pl': No such file or directory

2007-10-16 Benedikt Heintel
	- DISTS:
		* Updated ubuntu
	- ENGINE:
		* Fixed #7: Improvement of static AWStats
		* Fixed #7: Removed static dirs from conf filess
		* Fixed #55: Part I: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0